--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 	<meta name="theme-color" content="#009688">
 	<link href="./bower_components/angular/angular-csp.css" rel="stylesheet" type="text/css"/>
 	<link href="./bower_components/angular-material/angular-material.css" rel="stylesheet" type="text/css"/>
+	<!-- <link href="./bower_components/angular-ui-tree/dist/angular-ui-tree.css" rel="stylesheet" type="text/css"/> -->
 	<script src="./bower_components/requirejs/require.js" data-main="Main.js"></script>
 </head>
 <body>
