Fixed iOS glitch
Added js hack to fix iOS Safari not properly handling vh and vw in css.
Added bower dep that fixes on broke browsers (iOS isn't the only one,
but the only with the glitch in a recent version).

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>CloudView</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="theme-color" content="#009688">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#009688" />
 	<link href="./bower_components/angular/angular-csp.css" rel="stylesheet" type="text/css"/>
 	<link href="./bower_components/angular-material/angular-material.css" rel="stylesheet" type="text/css"/>
 	<!-- <link href="./bower_components/angular-ui-tree/dist/angular-ui-tree.css" rel="stylesheet" type="text/css"/> -->
