protect routes, app id

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>CloudView</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com"> <!-- TODO: put our id here -->
+	<meta name="google-signin-client_id" content="565687073066-b4g8ahiduf3uapmemgkoqdmkctgvevpf.apps.googleusercontent.com">
 	<link href="./bower_components/angular/angular-csp.css" rel="stylesheet" type="text/css"/>
 	<link href="./bower_components/angular-material/angular-material.css" rel="stylesheet" type="text/css"/>
 	<link href="./app.css" rel="stylesheet" type="text/css"/>
